[gd_scene load_steps=25 format=3 uid="uid://c7m1a1sad1r68"]

[ext_resource type="Script" path="res://player.gd" id="1_tgly5"]
[ext_resource type="Texture2D" uid="uid://c1yadny35xweu" path="res://week1_empty.png" id="2_ibqqf"]
[ext_resource type="Texture2D" uid="uid://vdg1i4iiltct" path="res://week1_chips.png" id="3_ovbpy"]
[ext_resource type="Texture2D" uid="uid://db5cnh58atfmc" path="res://week1_chips_soda.png" id="4_qlpjc"]
[ext_resource type="Texture2D" uid="uid://dfyi4cpfo2eoc" path="res://week1_soda.png" id="5_rtsb6"]
[ext_resource type="Texture2D" uid="uid://bsuj7mqwgt3cj" path="res://week2_bread.png" id="6_1hlqh"]
[ext_resource type="Texture2D" uid="uid://do8xx3ph7n7jn" path="res://week2_bread_water.png" id="7_7wcx8"]
[ext_resource type="Texture2D" uid="uid://dij76bn28djfx" path="res://week2_bread_water_eggs.png" id="8_0lniw"]
[ext_resource type="Texture2D" uid="uid://cfctllehn45y5" path="res://week2_eggs.png" id="9_cp8oy"]
[ext_resource type="Texture2D" uid="uid://dwh1pjvocgjtd" path="res://week2_empty.png" id="10_kj6tp"]
[ext_resource type="Texture2D" uid="uid://dtr6nysngydh0" path="res://week2_water.png" id="11_bdfd1"]
[ext_resource type="Texture2D" uid="uid://c3barwp4tl1xo" path="res://week2_water_eggs.png" id="12_2vuf4"]
[ext_resource type="Texture2D" uid="uid://cvvyrerhd0nvt" path="res://week3_choco.png" id="13_8lbll"]
[ext_resource type="Texture2D" uid="uid://b3iae1b8c3faj" path="res://week2_bread_eggs.png" id="13_d0uox"]
[ext_resource type="Texture2D" uid="uid://803qdstfx3oe" path="res://week3_choco_milk.png" id="14_otqll"]
[ext_resource type="Texture2D" uid="uid://b15k4usuya0kt" path="res://week3_empty.png" id="15_b1qxv"]
[ext_resource type="Texture2D" uid="uid://dsclv1jwb3mtk" path="res://week3_milk.png" id="16_nw2ed"]
[ext_resource type="Texture2D" uid="uid://d10gree8m0ilv" path="res://week4_chips.png" id="17_0n0ms"]
[ext_resource type="Texture2D" uid="uid://b6le03jgmlwya" path="res://week4_empty.png" id="18_gahiv"]
[ext_resource type="Texture2D" uid="uid://byyls13lfxgns" path="res://week4_water.png" id="19_8cda7"]
[ext_resource type="Texture2D" uid="uid://byp5aq37dvaux" path="res://week4_water_chips.png" id="20_1prve"]
[ext_resource type="PackedScene" uid="uid://dc28os4t76org" path="res://credits.tscn" id="22_qim0g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0kebj"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ncuy6"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="player" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_tgly5")

[node name="body" type="MeshInstance3D" parent="CharacterBody3D"]
visible = false
mesh = SubResource("CapsuleMesh_0kebj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("ConvexPolygonShape3D_ncuy6")

[node name="head" type="Node3D" parent="CharacterBody3D"]

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.711579, 0)

[node name="use" type="RayCast3D" parent="CharacterBody3D/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -8.74228e-08, -1, 0, 2, -4.37114e-08, 0, -0.0615795, 0)
collide_with_areas = true

[node name="delusionStare" type="RayCast3D" parent="CharacterBody3D/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, -0.061771, 0)

[node name="gList" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="w1e" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -200.0
offset_right = 128.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ibqqf")

[node name="w1c" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ovbpy")

[node name="w1s" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rtsb6")

[node name="w1cs" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qlpjc")

[node name="w2b" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1hlqh")

[node name="w2bw" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_7wcx8")

[node name="w2bwe" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0lniw")

[node name="w2e" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_cp8oy")

[node name="w2em" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_kj6tp")

[node name="w2w" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_bdfd1")

[node name="w2we" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_2vuf4")

[node name="w2be" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_d0uox")

[node name="w3c" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_8lbll")

[node name="w3cm" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_otqll")

[node name="w3e" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_b1qxv")

[node name="w3m" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_nw2ed")

[node name="w4c" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_0n0ms")

[node name="w4e" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_gahiv")

[node name="w4w" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_8cda7")

[node name="w4wc" type="TextureRect" parent="gList"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_1prve")

[node name="credits" parent="." instance=ExtResource("22_qim0g")]
visible = false
